Conform to hassfest and lint checks

--- a/custom_components/home_maintenance/translations/en.json
+++ b/custom_components/home_maintenance/translations/en.json
@@ -1,6 +1,13 @@
 {
   "config": {
     "flow_title": "Home Maintenance",
+    "step": {
+      "user": {
+        "title": "Configure Home Maintenance",
+        "description": "Set up the Home Maintenance integration.",
+        "data": {}
+      }
+    },
     "abort": {
       "single_instance_allowed": "Only a single instance of Home Maintenance is allowed."
     }
