Add config option for admin only panel #13

--- a/custom_components/home_maintenance/translations/en.json
+++ b/custom_components/home_maintenance/translations/en.json
@@ -5,11 +5,22 @@
       "user": {
         "title": "Configure Home Maintenance",
         "description": "Set up the Home Maintenance integration.",
-        "data": {}
+        "data": {
+          "admin_only": "Restrict panel to admins only"
+        }
       }
     },
     "abort": {
       "single_instance_allowed": "Only a single instance of Home Maintenance is allowed."
+    }
+  },
+  "options": {
+    "step": {
+      "init": {
+        "data": {
+          "admin_only": "Restrict panel to admins only"
+        }
+      }
     }
   }
 }
